[metadata]
name = flask-experiment
version = 0.0.1
author = Daniel Kertesz
author_email = "daniel@spatof.org"
description = Experiments with Flask
long_description = Experiments of coding patterns in Flask

[options]
packages = flask_experiment
install_requires =
    click == 8.1.3
    Flask == 2.1.2

[options.extras_require]
test =
    pytest == 7.1.2

[options.entry_points]
console_scripts =
    flask-experiment = flask_experiment.main:main

[tool:pytest]
testpaths = tests
